# zfpkm

./: pyproject.toml  ruff.toml  ty.toml
.github/workflows/: ci-3.10.yml  ci-3.9.yml  ci.yml  publish.yml
src/zfpkm/: __init__.py  type.py
